transform component rendering to jsx

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -4,13 +4,5 @@
   "tabWidth": 2,
   "arrowParens": "always",
   "trailingComma": "es5",
-  "bracketSpacing": true,
-  "overrides": [
-    {
-      "files": ["*.html"],
-      "options": {
-        "printWidth": 120
-      }
-    }
-  ]
+  "bracketSpacing": true
 }
