--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,17 +3,16 @@
     "browser": true,
     "node": true,
     "commonjs": true,
-    "es6": true,
+    "es6": true
   },
-  "parser": "babel-eslint",
+  "parser": "@babel/eslint-parser",
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module"
   },
-  "plugins": ["jest"],
   "extends": [
     "eslint:recommended",
-    "prettier",
+    "prettier"
   ],
   "globals": {
     "Atomics": "readonly",
