--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "todo-rotom",
+  "name": "todo-bulba-jsx",
   "version": "1.0.0",
-  "description": "A todo app using rotom-powered web components",
+  "description": "A todo app using bulba-powered web components",
   "main": "index.js",
   "scripts": {
     "build": "BUILD_ENV=build rollup -c",
@@ -11,6 +11,7 @@
     "@babel/core": "^7.17.0",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
+    "@bulba/element": "^0.13.0",
     "@babel/preset-env": "^7.16.11",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
@@ -29,7 +30,6 @@
     "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
-    "rotom": "^0.12.0",
     "sass": "^1.49.7",
     "uuid": "^8.3.2"
   },
