--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "@babel/core": "^7.17.0",
     "@babel/eslint-parser": "^7.17.0",
     "@babel/plugin-transform-react-jsx": "^7.16.7",
-    "@bulba/element": "^0.13.0",
     "@babel/preset-env": "^7.16.11",
+    "@bulba/element": "^0.13.0",
     "@rollup/plugin-babel": "^5.3.0",
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-node-resolve": "^13.1.3",
@@ -25,10 +25,9 @@
     "postcss": "^8.4.6",
     "prettier": "^2.5.1",
     "rollup": "^2.67.0",
+    "rollup-plugin-dev": "^2.0.4",
     "rollup-plugin-gzip": "^3.0.0",
-    "rollup-plugin-livereload": "^2.0.5",
     "rollup-plugin-scss": "^3.0.0",
-    "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "sass": "^1.49.7",
     "uuid": "^8.3.2"
